# wealthai

./: .gitignore  README.md  justfile  pyproject.toml  run.py  run_evals.py
docs/: CLIENT_PROFILE.md  INPUT_SCHEMA.md  OUTPUT_SCHEMA.md  TASK.md  TRANSCRIPT.md
input/clients/: client-001.json  client-002.json
input/expected/: client-001.json  client-002.json
input/transcripts/: client-001.txt  client-002.txt
output/changelogs/: client-001_20260504T203422.json  client-001_20260504T211745.json  client-001_20260504T214102.json  client-001_20260504T214746.json  client-001_20260504T215248.json  client-001_20260504T215742.json  client-001_20260505T064610.json  client-001_20260505T070440.json  client-001_20260505T070603.json  client-002_20260504T203219.json  client-002_20260504T215843.json  client-002_20260505T064616.json  client-002_20260505T070609.json
output/clients/: client-001_20260504T203422.json  client-001_20260504T211745.json  client-001_20260504T214102.json  client-001_20260504T214746.json  client-001_20260504T215248.json  client-001_20260504T215742.json  client-001_20260505T064610.json  client-001_20260505T070440.json  client-001_20260505T070603.json  client-002_20260504T203219.json  client-002_20260504T215843.json  client-002_20260505T064616.json  client-002_20260505T070609.json
src/wealthai/: config.py  evals.py  logging.py  main.py
src/wealthai/io/: __init__.py  load.py  store.py
src/wealthai/llm/: merger.py  node.py  state.py
tests/: test_evals.py
tests/llm/: test_merger.py
tests/schemas/: test_changelog.py  test_client.py
(+14 files in other folders)
